change the code

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Environment Variables
 
-# Gemini API Key (optional - fallback analysis works without it)
-GEMINI_API_KEY=AIzaSyBwdTcq4Vz5w7AXRlwlAn52jvgXHIsx0so
+# Gemini API Key (required for LLM analysis)
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # MongoDB (defaults work with docker-compose)
 MONGODB_URL=mongodb://mongodb:27017
 DATABASE_NAME=migration_analyzer
 
 # JWT Authentication
-SECRET_KEY=your-super-secret-key-change-in-production-use-long-random-string
+SECRET_KEY=your-super-secret-key-change-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
